<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.16</version>
		<relativePath/>
	</parent>
	<groupId>com.ocppcentralsystem</groupId>
	<artifactId>ocpp-central-system</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ocpp-central-system</name>
	<description>OCPP Central System</description>

	<scm>
		<connection>scm:git:git://github.com/ChargeTimeEU/Java-OCA-OCPP.git</connection>
		<developerConnection>scm:git:ssh://github.com:ChargeTimeEU/Java-OCA-OCPP.git</developerConnection>
		<url>https://github.com/ChargeTimeEU/Java-OCA-OCPP.git</url>
	</scm>

	<properties>
		<java.version>25</java.version>
		<!-- Tomcat is pinned ahead of the 3.5.16 BOM (10.1.55): 10.1.60 is
		     verified free of the 27 Tomcat advisories fixed in the 10.1.58+ line. -->
		<tomcat.version>10.1.60</tomcat.version>
		<!-- CVE-2025-48924: commons-lang3 < 3.18.0, pulled in transitively by
		     springdoc-openapi-starter-common. Spring Boot still manages the
		     vulnerable 3.17.0, so this override is required on any Boot version. -->
		<commons-lang3.version>3.20.0</commons-lang3.version>
		<!-- CVE-2026-49844: log4j-api < 2.25.5 (MapMessage JSON serialization).
		     Spring Boot 3.5.16 still manages the vulnerable 2.24.3. -->
		<log4j2.version>2.25.5</log4j2.version>
		<!-- CVE-2026-59889, CVE-2026-54515 and GHSA-mhm7-754m-9p8w affect
		     jackson-databind 2.21.0-2.21.4 (fixed in 2.21.5). The Spring Boot
		     3.5.16 BOM ships 2.21.4, so this override stays on the same minor
		     line rather than jumping to 2.22.x. -->
		<jackson-bom.version>2.21.6</jackson-bom.version>
		<mapstruct.version>1.5.5.Final</mapstruct.version>
		<spring-ai.version>1.1.7</spring-ai.version>
		<mcp-sdk.version>0.18.4</mcp-sdk.version>
		<postgresql.version>42.7.12</postgresql.version>
		<byte-buddy.version>1.18.14</byte-buddy.version>
	</properties>
	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.ai</groupId>
				<artifactId>spring-ai-bom</artifactId>
				<version>${spring-ai.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!-- spring-ai-mcp hardcodes MCP SDK 0.18.2; this BOM raises it to the
			     patched 0.18.4 within the same minor line (CVE-2026-34237). -->
			<dependency>
				<groupId>io.modelcontextprotocol.sdk</groupId>
				<artifactId>mcp-bom</artifactId>
				<version>${mcp-sdk.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.java-websocket</groupId>
			<artifactId>Java-WebSocket</artifactId>
			<version>1.5.4</version>
		</dependency>
		<dependency>
			<groupId>eu.chargetime.ocpp</groupId>
			<artifactId>v1_6</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.6</version>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>25</source>
					<target>25</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>0.1.0</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.48</version>
						</path>
						<path>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-configuration-processor</artifactId>
							<version>3.4.5</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>